# Induction-Hardening-ML

./: .gitignore  LICENSE  README.md  config.yaml  dataset.py  evaluate.py  losses.py  main.py  model.py  pyproject.toml  train.py  visualize.py  visualizer.py
config/: data_split.json  model_config.yaml
docs/: model_guide.md
docs/references/: ref.bib
docs/report_drafts/: report.tex
docs/report_drafts/figure/: fusion_module.tex  parallel_u_fno_arch.tex
scripts/: analyze_structure.py  data_process_visualize.py  demo_fno_synth.py  dummy_data_generate.py  dummy_data_generate_v2.py  evaluate.py  plot_geometry_mask.py  plot_loss.py  plot_paper_figures.py  process_raw_data.py  split_data.py  train.py  visualize.py
src/data/: dataset.py  preprocessor.py  transforms.py
src/engine/: trainer.py
src/models/: __init__.py  fno.py  parallel_u_fno.py
src/utils/: io.py  losses.py  metrics.py  plotting.py
